--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+h2 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.hidden{
+  display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.circles {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+body {
+  font-family: 'Dosis', sans-serif;
+  background-image: linear-gradient(to right top, #19d099, #ff0040);
+  background-attachment: fixed;
+  display: flex;
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
+  color: yellow;
+  max-width: 1200px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  font-family: inherit;
+  font-size: inherit;
+  background-color: #f3f3f3;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  margin: 5rem 1rem;
+  cursor: pointer;
 }
